# com_terminal

./: Cargo.toml  build.rs  com_log.txt  com_log2.txt
fonts/: www.dafontfree.net.url
src/: app.rs  file.rs  hex.rs  main copy.rs  main.rs  serial.rs  ui.rs
