[package]
name = "com_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
serialport = "4.2.0"
tokio = { version = "1.38", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"

# Здесь можно указать зависимости, специфичные для Windows, если они есть

# Здесь томл от гпт
# [package]
# name = "com_terminal"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# iced = { version = "0.10", features = ["tokio", "lazy"] }
# serialport = "4.2"
# rfd = "0.14"
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
