[package]
name = "com_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "async-std", "tokio"] }
serialport = "4.8.1"
tokio = { version = "1.47.1", features = ["full"] }
rfd = "0.15.4"
tokio-serial = "5.4.5"
plotters = "0.3.5"
plotters-iced = "0.4.0"
hex = "0.4"
futures = "0.3"
futures-channel = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clipboard = "0.5"
rustc-hash = "1.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"
